--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "turntabletime",
-  "version": "0.1.0",
+  "name": "analog-rhythm",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
